--- a/session3/index.html
+++ b/session3/index.html
@@ -9,6 +9,8 @@
     <button onclick="buttonClick()">Click me</button>
 
     <script src="basic_script.js"></script> 
+    <script src="conditional.js"></script>
+    <script src="loops.js"></script>
 
     <script>
         function buttonClick() {
