--- a/session3/index.html
+++ b/session3/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        button {
+            color: purple;
+        }
+    </style>
+    <link rel="javascript" href="basic_script.js">
 </head>
+<!--Inline, Internal, External-->
 <body>
     <button onclick="buttonClick()">Click me</button>
+    <script>
+        function buttonClick() {
+            console.log('Hello World');
+            console.log('Hello World2');
+        }
+    </script>
 
     <script src="basic_script.js"></script> 
     <script src="conditional.js"></script>
     <script src="loops.js"></script>
-
-    <script>
-        function buttonClick() {
-            console.log('Hello World');
-        }
-    </script>
 </body>
 </html>
