--- a/session4/index.html
+++ b/session4/index.html
@@ -10,18 +10,35 @@
     <h1 id="title">Hello World</h1>
     <p id="paragraph">This is a paragraph</p>
     <button id="clickMe">Change Text</button>
-    
-    <script src="DOMInteraction.js"></script>
+
+    <script src = "DOMAssignment.js"></script>
+    <!-- <script src="DOMInteraction.js"></script> -->
+    <!-- <script src ="ArrayObjectAssignment.js"></script> -->
+    <!-- <script src="FunctionAssignment.js"></script> -->
+    <!-- <script src="ArrayAndObject.js"></script> -->
+    <!-- <script src="FunctionAndScope.js"></script> -->
+
      <script>
-        let btn = document.getElementById("clickMe") 
-        btn.addEventListener("click", function(){ 
-           let title = document.getElementById("title") 
-           title.textContent = "The text has changed" 
-        }) 
+        let btn = document.getElementById("clickMe")  
+         btn.addEventListener("click", function(){  
+           let title = document.getElementById("title")  
+           //title.innerHTML = "The text has changed!"  
+           title.textContent = "The text has changed!"  
+         })
 
-       let paragraph = document.get("paragraph") 
+      let paragraph = document.getElementById("paragraph")  
+      paragraph.addEventListener("mouseover", function(){
+        paragraph.style.color = "pink"
+      })
+      paragraph.addEventListener("mouseout", function(){
+        paragraph.style.color = "black"
+      })
+
+      paragraph.addEventListener("click", function(){
+        paragraph.style.visibility = "hidden"
+      })
 
 
-    </script>
+    </script> 
 </body>
 </html>
