--- a/session4/miniproject.html
+++ b/session4/miniproject.html
@@ -24,7 +24,7 @@
 </style>
 
 <body>
-    <div class="container">
+<div class="container">
   <h2>Tip Calculator</h2>
   <label>Bill Amount (RM):</label>
   <input type="number" id="billInput">
@@ -36,4 +36,8 @@
  
   <p id="result"></p>
 </div>
+
+  <script src ="miniproject.js"></script>
+
 </body>
+</html>
